--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,34,35}-dj{18,19,110,111}
+envlist = py{36,37,38}-dj{22,30}
 
 [testenv]
 usedevelop = true
@@ -8,9 +8,8 @@ setenv =
 changedir = {toxinidir}/tests/test_project
 deps=
     -rtests/requirements.txt
-    dj18: https://github.com/django/django/archive/stable/1.8.x.tar.gz#egg=django
-    dj19: https://github.com/django/django/archive/stable/1.9.x.tar.gz#egg=django
-    dj110: https://github.com/django/django/archive/stable/1.10.x.tar.gz#egg=django
-    dj111: https://github.com/django/django/archive/stable/1.11.x.tar.gz#egg=django
+    dj22: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
+    dj30: https://github.com/django/django/archive/stable/3.0.x.tar.gz#egg=django
 commands=
     python manage.py test  {posargs:test_project.viewtest}
+passenv = DB_NAME DB_USER DB_PASSWORD
