Support multiple databases (refs #9)

--- a/tox.ini
+++ b/tox.ini
@@ -12,5 +12,5 @@ deps=
     dj31: https://github.com/django/django/archive/stable/3.1.x.tar.gz#egg=django
     dj32: https://github.com/django/django/archive/stable/3.1.x.tar.gz#egg=django
 commands=
-    python manage.py test  {posargs:test_project.viewtest}
+    python manage.py test  {posargs:test_project.viewtest test_project.multidbtest}
 passenv = DB_NAME DB_USER DB_PASSWORD
