--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 [tox]
-envlist = py{36,37,38,39,310}-dj{22,31,32}
+envlist =
+    py{36,37,38,39,310}-dj{22,31,32},
+    py{38,39,310}-dj40
+
 
 [testenv]
 usedevelop = true
@@ -11,6 +14,7 @@ deps=
     dj22: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
     dj31: https://github.com/django/django/archive/stable/3.1.x.tar.gz#egg=django
     dj32: https://github.com/django/django/archive/stable/3.1.x.tar.gz#egg=django
+    dj40: https://github.com/django/django/archive/stable/4.0.x.tar.gz#egg=django
 commands=
     python manage.py test  {posargs:test_project.viewtest test_project.multidbtest}
 passenv = DB_NAME DB_USER DB_PASSWORD
