First version of github actions

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,12 @@ envlist =
     py{37,38,39,310}-dj{32},
     py{38,39,310}-dj{40,41}
 
+[gh]
+python =
+    "3.7" = py37
+    "3.8" = py38
+    "3.9" = py39
+    "3.10" = py310
 
 [testenv]
 usedevelop = true
