--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     py{37,38,39,310}-dj{32},
-    py{38,39,310}-dj{40,41}
+    py{38,39,310,311}-dj{40,41,42}
 
 [gh]
 python =
@@ -9,6 +9,7 @@ python =
     "3.8" = py38
     "3.9" = py39
     "3.10" = py310
+    "3.11" = py311
 
 [testenv]
 usedevelop = true
@@ -20,6 +21,7 @@ deps=
     dj32: https://github.com/django/django/archive/stable/3.2.x.tar.gz#egg=django
     dj40: https://github.com/django/django/archive/stable/4.0.x.tar.gz#egg=django
     dj41: https://github.com/django/django/archive/stable/4.1.x.tar.gz#egg=django
+    dj42: https://github.com/django/django/archive/stable/4.2.x.tar.gz#egg=django
 commands=
     python manage.py test  {posargs:test_project.viewtest test_project.multidbtest}
-passenv = DB_NAME DB_USER DB_PASSWORD
+passenv = DB_NAME,DB_USER,DB_PASSWORD
