--- a/tox.ini
+++ b/tox.ini
@@ -24,4 +24,7 @@ deps=
     dj42: https://github.com/django/django/archive/stable/4.2.x.tar.gz#egg=django
 commands=
     python manage.py test  {posargs:test_project.viewtest test_project.multidbtest}
-passenv = DB_NAME,DB_USER,DB_PASSWORD
+passenv =
+    DB_NAME
+    DB_USER
+    DB_PASSWORD
