Test with psycopg2 and psycopg3

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist =
-    py{37,38,39,310}-dj{32},
-    py{38,39,310,311}-dj{40,41,42}
+    py{37,38,39,310}-dj{32}-pg2
+    py{38,39,310,311}-dj{40,41}-pg2
+    py{38,39,310,311}-dj{42}-pg{2,3}
 
 [gh]
 python =
@@ -17,7 +18,8 @@ setenv =
     DJANGO_SETTINGS_MODULE = test_project.settings.ci
 changedir = {toxinidir}/tests/test_project
 deps=
-    -rtests/requirements.txt
+    pg2: psycopg2>2.9
+    pg3: psycopg>3.1
     dj32: https://github.com/django/django/archive/stable/3.2.x.tar.gz#egg=django
     dj40: https://github.com/django/django/archive/stable/4.0.x.tar.gz#egg=django
     dj41: https://github.com/django/django/archive/stable/4.1.x.tar.gz#egg=django
