Replace black with ruff

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
+default_language_version:
+  python: python3.8
 repos:
--   repo: https://github.com/ambv/black
-    rev: "23.9.1"
-    hooks:
-    - id: black
-      language_version: python3.8
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  rev: 'v0.4.2'
+  hooks:
+  - id: ruff-format
