--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,3 @@
-[tool.black]
+[tool.ruff]
 line-length = 120
-target_version = ['py38']
-include = '\.pyi?$'
-exclude = '''
-
-(
-  /(
-      \.eggs         # exclude a few common directories in the
-    | \.git          # root of the project
-    | \.hg
-    | \.mypy_cache
-    | \.tox
-    | \.venv
-    | _build
-    | buck-out
-    | build
-    | dist
-    | venv
-  )/
-)
-'''
+target-version = "py38"
