Configure and use ruff formatter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,43 @@
 [tool.ruff]
 line-length = 120
 target-version = "py38"
+
+
+[tool.ruff.lint]
+select = [
+    # https://github.com/charliermarsh/ruff#pyflakes-f
+    "F",
+    # https://github.com/charliermarsh/ruff#pycodestyle-e-w
+    "E",
+    "W",
+    # https://github.com/charliermarsh/ruff#isort-i
+    "I",
+    # https://github.com/charliermarsh/ruff#pep8-naming-n
+    "N",
+    # https://github.com/charliermarsh/ruff#pyupgrade-up
+    "UP",
+    # https://github.com/charliermarsh/ruff#flake8-bugbear-b
+    "B",
+    # https://github.com/charliermarsh/ruff#flake8-comprehensions-c4
+    "C4",
+    # https://github.com/charliermarsh/ruff#flake8-debugger-t10
+    "T10",
+    # https://github.com/charliermarsh/ruff#flake8-pie-pie
+    "PIE",
+    # https://github.com/charliermarsh/ruff#flake8-return-ret
+    "RET",
+    # https://github.com/charliermarsh/ruff#flake8-simplify-sim
+    "SIM",
+]
+
+# Never enforce...
+ignore = [
+    "E501",   # line length violations
+    "PT004",  # missing-fixture-name-underscore
+    "SIM108", # use-ternary-operator
+    "RET505", # superfluous-else-return
+    "RET506", # superfluous-else-raise
+    "RET507", # superfluous-else-continue
+    "RET508", # superfluous-else-break
+    "B027",   # empty-method-without-abstract-decorator
+]
