--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,4 +4,6 @@ repos:
 - repo: https://github.com/charliermarsh/ruff-pre-commit
   rev: 'v0.4.2'
   hooks:
+  - id: ruff
+    args: [ "--fix" ]
   - id: ruff-format
