Simplify test structure

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ python =
 usedevelop = true
 setenv =
     DJANGO_SETTINGS_MODULE = test_project.settings.ci
-changedir = {toxinidir}/tests/test_project
+changedir = {toxinidir}/tests
 deps=
     pg2: psycopg2>2.9
     pg3: psycopg>3.1
