Add tests for explicit schema handling

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ deps=
     dj42: https://github.com/django/django/archive/stable/4.2.x.tar.gz#egg=django
     dj50: https://github.com/django/django/archive/stable/5.0.x.tar.gz#egg=django
 commands=
-    python manage.py test  {posargs:test_project.viewtest test_project.multidbtest}
+    python manage.py test {posargs:test_project.viewtest test_project.multidbtest test_project.schemadbtest} -v2
 passenv =
     DB_NAME
     DB_USER
