Update package metadata for next release

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
     "Framework :: Django",
     "Framework :: Django :: 4.2",
     "Framework :: Django :: 5.0",
+    "Framework :: Django :: 5.1",
     "License :: Public Domain",
     "License :: OSI Approved :: The Unlicense (Unlicense)",
 ]
