--- a/.github/workflows/pre_commit.yml
+++ b/.github/workflows/pre_commit.yml
@@ -8,7 +8,6 @@ on:
   workflow_dispatch:
 
 name: Pre-commit
-
 jobs:
   pre_commit:
     name: Pre-commit
@@ -19,3 +18,5 @@ jobs:
         with:
           python-version: '3.9'
       - uses: pre-commit/action@v3.0.1
+        env:
+          SKIP: "trufflehog"
