--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,22 @@
 default_language_version:
   python: python3.9
 repos:
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: "v5.0.0"
+  hooks:
+  - id: no-commit-to-branch
 - repo: https://github.com/astral-sh/ruff-pre-commit
   rev: 'v0.8.0'
   hooks:
   - id: ruff
     args: [ "--fix" ]
   - id: ruff-format
+- repo: https://github.com/trufflesecurity/trufflehog.git
+  rev: "v3.84.2"
+  hooks:
+  - id: trufflehog
+    name: TruffleHog
+    description: Detect secrets in your data.
+    entry: bash -c 'trufflehog git file://. --since-commit HEAD --only-verified --fail --no-update'
+    language: system
+    stages: ["pre-commit", "pre-push"]
