--- a/.github/workflows/pre_commit.yml
+++ b/.github/workflows/pre_commit.yml
@@ -18,4 +18,15 @@ jobs:
       - uses: actions/setup-python@v6
         with:
           python-version: '3.10'
+      - name: Install Poetry
+        uses: snok/install-poetry@v1.4.1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      - name: Install dependencies
+        run: poetry install --with dev
+      - name: Activate venv
+        run: echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
       - uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --all-files
