Migrate tox to pytest

--- a/tox.ini
+++ b/tox.ini
@@ -14,18 +14,19 @@ python =
 
 [testenv]
 usedevelop = true
-setenv =
-    DJANGO_SETTINGS_MODULE = test_project.settings.ci
-changedir = {toxinidir}/tests
 deps=
+    pytest
+    pytest-django
     pg2: psycopg2>2.9
     pg3: psycopg>3.1
     dj42: https://github.com/django/django/archive/stable/4.2.x.tar.gz#egg=django
     dj52: https://github.com/django/django/archive/stable/5.2.x.tar.gz#egg=django
     dj60: https://github.com/django/django/archive/stable/6.0.x.tar.gz#egg=django
 commands=
-    python manage.py test {posargs:test_project.viewtest test_project.multidbtest test_project.schemadbtest} -v2
+    pytest {posargs}
 passenv =
     DB_NAME
     DB_USER
     DB_PASSWORD
+    DB_PORT
+
