--- a/tox.ini
+++ b/tox.ini
@@ -14,16 +14,19 @@ python =
 
 [testenv]
 usedevelop = true
+setenv =
+    COVERAGE_FILE = .coverage.{envname}
 deps=
     pytest
     pytest-django
+    pytest-cov
     pg2: psycopg2>2.9
     pg3: psycopg>3.1
     dj42: https://github.com/django/django/archive/stable/4.2.x.tar.gz#egg=django
     dj52: https://github.com/django/django/archive/stable/5.2.x.tar.gz#egg=django
     dj60: https://github.com/django/django/archive/stable/6.0.x.tar.gz#egg=django
 commands=
-    pytest {posargs}
+    pytest --cov=django_pgviews --cov-report= --cov-append {posargs}
 passenv =
     DB_NAME
     DB_USER
