--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -42,3 +42,46 @@ jobs:
         run: python -m pip install tox-gh
       - name: Run test suite
         run: tox
+      - name: Upload coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-${{ matrix.py }}-${{ matrix.postgres-version }}
+          path: .coverage.*
+          include-hidden-files: true
+          if-no-files-found: ignore
+
+  coverage:
+    name: report coverage
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.event_name == 'pull_request'
+    steps:
+      - uses: actions/checkout@v6
+      - name: Download all coverage artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: coverage-reports
+          pattern: coverage-*
+          merge-multiple: true
+      - name: Setup python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        run: pip install coverage
+      - name: Combine coverage
+        run: |
+          coverage combine coverage-reports/
+          coverage xml
+          coverage report -m > coverage.txt
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-xml-coverage-path: coverage.xml
+          pytest-coverage-path: coverage.txt
+          title: Coverage Report
+          badge-title: Coverage
+          hide-badge: false
+          hide-report: false
+          create-new-comment: false
+          github-token: ${{ secrets.GITHUB_TOKEN }}
