--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ python =
 usedevelop = true
 setenv =
     COVERAGE_FILE = .coverage.{envname}
+    PYTEST_JUNIT_XML = pytest.{envname}.xml
 deps=
     pytest
     pytest-django
@@ -26,7 +27,7 @@ deps=
     dj52: https://github.com/django/django/archive/stable/5.2.x.tar.gz#egg=django
     dj60: https://github.com/django/django/archive/stable/6.0.x.tar.gz#egg=django
 commands=
-    pytest --cov=django_pgviews --cov-report= --cov-append {posargs}
+    pytest --cov=django_pgviews --cov-report= --cov-append --junitxml={env:PYTEST_JUNIT_XML} {posargs}
 passenv =
     DB_NAME
     DB_USER
