--- a/tox.ini
+++ b/tox.ini
@@ -15,17 +15,22 @@ python =
 [testenv]
 usedevelop = true
 setenv =
-    DJANGO_SETTINGS_MODULE = test_project.settings.ci
-changedir = {toxinidir}/tests
+    COVERAGE_FILE = .coverage.{envname}
+    PYTEST_JUNIT_XML = pytest.{envname}.xml
 deps=
+    pytest
+    pytest-django
+    pytest-cov
     pg2: psycopg2>2.9
     pg3: psycopg>3.1
     dj42: https://github.com/django/django/archive/stable/4.2.x.tar.gz#egg=django
     dj52: https://github.com/django/django/archive/stable/5.2.x.tar.gz#egg=django
     dj60: https://github.com/django/django/archive/stable/6.0.x.tar.gz#egg=django
 commands=
-    python manage.py test {posargs:test_project.viewtest test_project.multidbtest test_project.schemadbtest} -v2
+    pytest --cov=django_pgviews --cov-report= --cov-append --junitxml={env:PYTEST_JUNIT_XML} {posargs}
 passenv =
     DB_NAME
     DB_USER
     DB_PASSWORD
+    DB_PORT
+
