--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,5 +81,6 @@ project-includes = [
 dev = [
     "pyrefly (>=0.46.0,<0.47.0)",
     "django-stubs (>=5.2.8,<6.0.0)",
-    "psycopg (>=3.3.2,<4.0.0)"
+    "psycopg (>=3.3.2,<4.0.0)",
+    "pytest-django (>=4.11.1,<5.0.0)"
 ]
